--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/node": "^17.0.21",
         "@types/pg": "^8.6.5",
@@ -21,6 +22,7 @@
         "typescript": "^4.6.2"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "pg": "^8.7.3"
     }
 }
